# Multi-Agent-Scaffold

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  smart_policy.md
.github/workflows/: ci.yml
app/: main.py
app/agents/: api_agent.py  architect.py  codegen.py  frontend_agent.py  planner.py  reviewer.py  schema_agent.py
app/api/: routes.py  schemas.py
app/core/: config.py  metrics.py
app/models/: api_models.py  architect_models.py  codegen_models.py  frontend_models.py  planner_models.py  retrieval_models.py  review_models.py  schema_models.py  shared.py  validation_models.py
app/orchestrator/: async_manager.py  graph.py  runner.py  state.py
app/services/: artifact_store.py  llm.py  prompt_loader.py  stage_cache.py
app/tools/: api_checker.py  file_builder.py  packager.py  retrieval.py  schema_validator.py  ui_mapper.py
app/utils/: json_io.py
deploy/k8s/: deployment.yaml
evals/: cases.json  runner.py  scoring.py
knowledge/examples/: marketplace_example.md
knowledge/templates/backend/: fastapi_crud_template.md
knowledge/templates/frontend/: react_list_template.md
prompts/: api_agent.md  architect.md  codegen.md  frontend_agent.md  planner.md  reviewer.md  schema_agent.md
scripts/: run_api.sh  run_demo.py  run_ui.sh
tests/: conftest.py  test_agents.py  test_api_smoke.py  test_orchestrator.py  test_validators.py
ui/: streamlit_app.py
